a bunch of cleaning and sentiment scores for the blurb

--- a/Cleaning.ipynb
+++ b/Cleaning.ipynb
@@ -2,31 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from matplotlib import pyplot as plt\n",
     "\n",
-    "import numpy as np\n",
-    "\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import MinMaxScaler\n",
-    "from sklearn.metrics import r2_score, mean_squared_error, explained_variance_score, max_error\n",
-    "\n",
-    "from keras.models import Sequential\n",
-    "from keras.models import model_from_json\n",
-    "from keras.layers import Dense\n",
-    "from keras.layers import LSTM\n",
-    "from keras.layers import Dropout\n",
-    "from keras.optimizers import Adam\n",
-    "from keras.callbacks import CSVLogger"
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +249,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +435,7 @@
        "4   Kingsbury, TX    True   public art  "
       ]
      },
-     "execution_count": 46,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -458,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -469,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -616,7 +604,7 @@
        "4 2012-03-29 03:37:20       False   Kingsbury, TX    True   public art  "
       ]
      },
-     "execution_count": 48,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -627,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -638,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -785,7 +773,7 @@
        "4   Kingsbury, TX    True   public art  "
       ]
      },
-     "execution_count": 50,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -796,7 +784,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2009-04-22 00:00:00 2018-02-02 00:00:00\n",
+      "2009-04-25 00:00:00 2018-02-07 00:00:00\n",
+      "2009-05-29 00:00:00 2018-02-15 00:00:00\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df['created_at'].min(), df['created_at'].max())\n",
+    "print(df['launched_at'].min(), df['launched_at'].max())\n",
+    "print(df['deadline'].min(), df['deadline'].max())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -806,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -965,7 +974,7 @@
        "4   Kingsbury, TX    True   public art              52               30  "
       ]
      },
-     "execution_count": 52,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -976,7 +985,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['launched_year'] = df['launched_at'].dt.year"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -985,7 +1003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1021,6 +1039,7 @@
        "      <th>subcategory</th>\n",
        "      <th>days_to_launch</th>\n",
        "      <th>days_to_dealine</th>\n",
+       "      <th>launched_year</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1038,6 +1057,7 @@
        "      <td>mixed media</td>\n",
        "      <td>81</td>\n",
        "      <td>22</td>\n",
+       "      <td>2012</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1053,6 +1073,7 @@
        "      <td>public art</td>\n",
        "      <td>24</td>\n",
        "      <td>40</td>\n",
+       "      <td>2012</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1068,6 +1089,7 @@
        "      <td>sculpture</td>\n",
        "      <td>7</td>\n",
        "      <td>60</td>\n",
+       "      <td>2012</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1083,6 +1105,7 @@
        "      <td>art</td>\n",
        "      <td>8</td>\n",
        "      <td>21</td>\n",
+       "      <td>2012</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1098,6 +1121,7 @@
        "      <td>public art</td>\n",
        "      <td>52</td>\n",
        "      <td>30</td>\n",
+       "      <td>2012</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1118,21 +1142,51 @@
        "3      USD      1.0   6500.0       False     Glasgow, UK    True          art   \n",
        "4      USD      1.0  15000.0       False   Kingsbury, TX    True   public art   \n",
        "\n",
-       "   days_to_launch  days_to_dealine  \n",
-       "0              81               22  \n",
-       "1              24               40  \n",
-       "2               7               60  \n",
-       "3               8               21  \n",
-       "4              52               30  "
+       "   days_to_launch  days_to_dealine  launched_year  \n",
+       "0              81               22           2012  \n",
+       "1              24               40           2012  \n",
+       "2               7               60           2012  \n",
+       "3               8               21           2012  \n",
+       "4              52               30           2012  "
       ]
      },
-     "execution_count": 54,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df.head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2015    19978\n",
+       "2014    18014\n",
+       "2016    13003\n",
+       "2017    11195\n",
+       "2012    10696\n",
+       "2013     9943\n",
+       "2011     7904\n",
+       "2010     4003\n",
+       "2009      543\n",
+       "2018      355\n",
+       "Name: launched_year, dtype: int64"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['launched_year'].value_counts()"
    ]
   },
   {
