--- a/Visualization.ipynb
+++ b/Visualization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -597,6 +597,195 @@
    ],
    "source": [
     "correlations = df['funded'].corr(df['is_location_la'])\n",
+    "print(correlations)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(\"KS_final_train.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.026319837534695772\n"
+     ]
+    }
+   ],
+   "source": [
+    "correlations = df['is_2009'].corr(df['funded'])\n",
+    "print(correlations)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.09888065469845676\n"
+     ]
+    }
+   ],
+   "source": [
+    "correlations = df['is_2010'].corr(df['funded'])\n",
+    "print(correlations)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.14857904315204304\n"
+     ]
+    }
+   ],
+   "source": [
+    "correlations = df['is_2011'].corr(df['funded'])\n",
+    "print(correlations)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.15302706159648247\n"
+     ]
+    }
+   ],
+   "source": [
+    "correlations = df['is_2012'].corr(df['funded'])\n",
+    "print(correlations)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.14871855330584854\n"
+     ]
+    }
+   ],
+   "source": [
+    "correlations = df['is_2013'].corr(df['funded'])\n",
+    "print(correlations)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-0.12352471693546055\n"
+     ]
+    }
+   ],
+   "source": [
+    "correlations = df['is_2014'].corr(df['funded'])\n",
+    "print(correlations)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-0.19202750448220776\n"
+     ]
+    }
+   ],
+   "source": [
+    "correlations = df['is_2015'].corr(df['funded'])\n",
+    "print(correlations)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-0.07753192971564316\n"
+     ]
+    }
+   ],
+   "source": [
+    "correlations = df['is_2016'].corr(df['funded'])\n",
+    "print(correlations)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-0.01171342107845478\n"
+     ]
+    }
+   ],
+   "source": [
+    "correlations = df['is_2017'].corr(df['funded'])\n",
+    "print(correlations)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.006398541358101657\n"
+     ]
+    }
+   ],
+   "source": [
+    "correlations = df['is_2018'].corr(df['funded'])\n",
     "print(correlations)"
    ]
   },
