final cleaned test data

--- a/Neural Network (Experiment).ipynb
+++ b/Neural Network (Experiment).ipynb
@@ -3122,7 +3122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3131,7 +3131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3157,7 +3157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3170,7 +3170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -3195,8 +3195,6 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>staff_pick</th>\n",
-       "      <th>days_to_launch</th>\n",
-       "      <th>days_to_dealine</th>\n",
        "      <th>is_cat_art</th>\n",
        "      <th>is_cat_music</th>\n",
        "      <th>is_cat_film</th>\n",
@@ -3204,138 +3202,140 @@
        "      <th>is_cat_publishing</th>\n",
        "      <th>is_cat_food</th>\n",
        "      <th>is_cat_games</th>\n",
+       "      <th>is_cat_fashion</th>\n",
+       "      <th>is_cat_comics</th>\n",
        "      <th>...</th>\n",
-       "      <th>is_2013</th>\n",
-       "      <th>is_2014</th>\n",
-       "      <th>is_2015</th>\n",
        "      <th>is_2016</th>\n",
        "      <th>is_2017</th>\n",
        "      <th>is_2018</th>\n",
        "      <th>sentiment_pos</th>\n",
        "      <th>sentiment_neu</th>\n",
        "      <th>sentiment_neg</th>\n",
+       "      <th>log_goal_usd</th>\n",
+       "      <th>log_days_to_launch</th>\n",
+       "      <th>log_days_to_dealine</th>\n",
        "      <th>blurb_bayes</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>False</td>\n",
-       "      <td>26</td>\n",
-       "      <td>23</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.557303</td>\n",
+       "      <td>0.425425</td>\n",
+       "      <td>0.647203</td>\n",
        "      <td>0.039453</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>False</td>\n",
-       "      <td>4</td>\n",
-       "      <td>20</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.485934</td>\n",
+       "      <td>0.207745</td>\n",
+       "      <td>0.612425</td>\n",
        "      <td>0.863586</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>False</td>\n",
-       "      <td>6</td>\n",
-       "      <td>5</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.498387</td>\n",
+       "      <td>0.251177</td>\n",
+       "      <td>0.286138</td>\n",
        "      <td>0.910864</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>False</td>\n",
-       "      <td>63</td>\n",
-       "      <td>60</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.615617</td>\n",
+       "      <td>0.536826</td>\n",
+       "      <td>0.890160</td>\n",
        "      <td>0.845566</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>True</td>\n",
-       "      <td>4</td>\n",
-       "      <td>18</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.560511</td>\n",
+       "      <td>0.207745</td>\n",
+       "      <td>0.586358</td>\n",
        "      <td>0.699852</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -3344,38 +3344,45 @@
        "</div>"
       ],
       "text/plain": [
-       "   staff_pick  days_to_launch  days_to_dealine  is_cat_art  is_cat_music  \\\n",
-       "0       False              26               23        True         False   \n",
-       "1       False               4               20        True         False   \n",
-       "2       False               6                5        True         False   \n",
-       "3       False              63               60        True         False   \n",
-       "4        True               4               18        True         False   \n",
+       "   staff_pick  is_cat_art  is_cat_music  is_cat_film  is_cat_technology  \\\n",
+       "0         0.0         1.0           0.0          0.0                0.0   \n",
+       "1         0.0         1.0           0.0          0.0                0.0   \n",
+       "2         0.0         1.0           0.0          0.0                0.0   \n",
+       "3         0.0         1.0           0.0          0.0                0.0   \n",
+       "4         1.0         1.0           0.0          0.0                0.0   \n",
        "\n",
-       "   is_cat_film  is_cat_technology  is_cat_publishing  is_cat_food  \\\n",
-       "0        False              False              False        False   \n",
-       "1        False              False              False        False   \n",
-       "2        False              False              False        False   \n",
-       "3        False              False              False        False   \n",
-       "4        False              False              False        False   \n",
+       "   is_cat_publishing  is_cat_food  is_cat_games  is_cat_fashion  \\\n",
+       "0                0.0          0.0           0.0             0.0   \n",
+       "1                0.0          0.0           0.0             0.0   \n",
+       "2                0.0          0.0           0.0             0.0   \n",
+       "3                0.0          0.0           0.0             0.0   \n",
+       "4                0.0          0.0           0.0             0.0   \n",
        "\n",
-       "   is_cat_games  ...  is_2013  is_2014  is_2015  is_2016  is_2017  is_2018  \\\n",
-       "0         False  ...    False    False    False    False    False    False   \n",
-       "1         False  ...    False    False    False    False    False    False   \n",
-       "2         False  ...    False    False    False    False    False    False   \n",
-       "3         False  ...    False    False    False    False    False    False   \n",
-       "4         False  ...    False    False    False    False    False    False   \n",
+       "   is_cat_comics  ...  is_2016  is_2017  is_2018  sentiment_pos  \\\n",
+       "0            0.0  ...      0.0      0.0      0.0            1.0   \n",
+       "1            0.0  ...      0.0      0.0      0.0            0.0   \n",
+       "2            0.0  ...      0.0      0.0      0.0            0.0   \n",
+       "3            0.0  ...      0.0      0.0      0.0            1.0   \n",
+       "4            0.0  ...      0.0      0.0      0.0            0.0   \n",
        "\n",
-       "   sentiment_pos  sentiment_neu  sentiment_neg  blurb_bayes  \n",
-       "0           True          False          False     0.039453  \n",
-       "1          False           True          False     0.863586  \n",
-       "2          False           True          False     0.910864  \n",
-       "3           True          False          False     0.845566  \n",
-       "4          False           True          False     0.699852  \n",
+       "   sentiment_neu  sentiment_neg  log_goal_usd  log_days_to_launch  \\\n",
+       "0            0.0            0.0      0.557303            0.425425   \n",
+       "1            1.0            0.0      0.485934            0.207745   \n",
+       "2            1.0            0.0      0.498387            0.251177   \n",
+       "3            0.0            0.0      0.615617            0.536826   \n",
+       "4            1.0            0.0      0.560511            0.207745   \n",
+       "\n",
+       "   log_days_to_dealine  blurb_bayes  \n",
+       "0             0.647203     0.039453  \n",
+       "1             0.612425     0.863586  \n",
+       "2             0.286138     0.910864  \n",
+       "3             0.890160     0.845566  \n",
+       "4             0.586358     0.699852  \n",
        "\n",
        "[5 rows x 39 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3386,11 +3393,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('KS_test_final', index=False)"
+    "df.to_csv('KS_test_final.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictions = classifier.predict(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(\"KS_test_data.csv\", delimiter=\";\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['predictions'] = predictions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('predictions.tsv', sep='\\t', columns=['project_id','predictions'], index=False)"
    ]
   },
   {
